--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
     </div>
     
     <div class="footer">
-        <a href="professional.html">Back to Professional Pages</a>
+        <a href="resume.html">Back to Professional Pages</a>
         <p>(Note: Replace "professional.html" with your actual professional page URL when deploying.)</p>
     </div>
 </body>
-
 </html>
