--- a/html/Gympage.html
+++ b/html/Gympage.html
@@ -71,8 +71,8 @@
     </div>
     
     <div class="footer">
-        <a href="professional.html">Back to Professional Pages</a>
-        <p>(Note: Replace "professional.html" with your actual professional page URL when deploying.)</p>
+        <a href="resume.html">Back to Professional Pages</a>
     </div>
 </body>
+
 </html>
