--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
     </div>
     
     <div class="footer">
-        <a href="resume.html">Back to Professional Pages</a>
+        <a href="resume.html">Back to Professional Pages.</a>
     </div>
 </body>
 
 </html>
+
 
