--- a/resume/resume.html
+++ b/resume/resume.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lucky Jamison | Online Resume</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="resume.css">
 </head>
 <body>
   <div class="resume-shell">
@@ -168,3 +168,4 @@
   </div>
 </body>
 </html>
+
