--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lucky Jamison | Online Resume</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="resume.css">
 </head>
 <body>
   <div class="resume-shell">
@@ -21,6 +21,10 @@
       <div class="meta">
         <div>Provo, Utah</div>
         <div class="tiny">Open to part‑time & internship opportunities</div>
+        <div class="contact">
+          <div>Email: <a href="mailto:lucky@example.com">lucky@example.com</a></div>
+          <div>Phone: (555) 555‑0123</div>
+        </div>
       </div>
     </header>
 
