Update footer to include Fitness Challenge link
Added a link to a fitness challenge page in the footer.

--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
     
     <div class="footer">
         <a href="resume.html">Back to Professional Pages.</a>
+          <a href="game.html">Fitness Challenge.</a>
     </div>
 </body>
 
 </html>
+
 
 
